--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    flex-direction: column;
 }
 .wrapper {
     display: flex;
